# drone

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Justfile  README.md  flake.nix  rust-toolchain  rustfmt.toml
config/: Cargo.toml
config/src/: addr.rs  config.rs  format.rs  layout.rs  lib.rs  size.rs
openocd/: Cargo.toml  build.rs  wrapper.c
openocd-sys/: Cargo.toml  build.rs  openocd  wrapper.c  wrapper.h
openocd-sys/src/: lib.rs
project-templates/raspberrypi-pico/: .gitignore  Cargo.toml  boot2.ld  build.rs  flake.nix  layout.toml  probe.tcl  vectors.ld
project-templates/raspberrypi-pico/src/: lib.rs  main.rs  thr0.rs  thr1.rs
project-templates/raspberrypi-pico/src/tasks/: mod.rs  root0.rs  root1.rs
project-templates/stm32/: Cargo.toml  build.rs  flake.nix  layout.toml  probe.tcl  vectors.ld
project-templates/stm32/src/: lib.rs  main.rs  thr.rs
project-templates/stm32/src/tasks/: root.rs
project_template_stm32/: Cargo.toml  build.rs  flake.nix  layout.toml  probe.tcl  vtable.ld
project_template_stm32/src/: lib.rs  main.rs  thr.rs
project_template_stm32/src/tasks/: root.rs
src/: bmp.rs  cli.rs  color.rs  crates.rs  device.rs  env.rs  itm.rs  lib.rs  main.rs  new.rs  openocd.rs  templates.rs  utils.rs
src/cmd/: debug.rs  env.rs  flash.rs  gdb.rs  heap.rs  init.rs  list_supported.rs  load.rs  log.rs  mod.rs  new.rs  openocd.rs  print.rs  probe.rs  reset.rs  run.rs  server.rs  stream.rs  support.rs
src/devices/: mod.rs  registry.rs
src/heap/: generate.rs  layout.rs  mod.rs  trace.rs
src/log/: dso.rs  mod.rs  output.rs  swo.rs  uart.rs
src/monitor/: mod.rs  swo.rs  uart.rs
src/openocd/: log.rs  mod.rs  stream.rs
src/openocd/stream/: mod.rs  runtime.rs
src/probe/: bmp.rs  jlink.rs  log.rs  mod.rs  openocd.rs
src/stream/: mod.rs  route.rs  runtime.rs
src/template/: build_rs.rs  cargo_toml.rs  drone_toml.rs  envrc.rs  flake_nix.rs  gitignore.rs  layout_ld.rs  mod.rs  probe_tcl.rs  src_lib_rs.rs  src_main_rs.rs  src_tasks_mod_rs.rs  src_tasks_root_rs.rs  src_thr_rs.rs
src/templates/: helpers.rs  layout.ld.hbs  layout_ld.rs  mod.rs
src/templates/bmp/: flash.gdb.hbs  gdb.gdb.hbs  itm.gdb.hbs  reset.gdb.hbs  stm32.gdb.hbs  swo.gdb.hbs  target.gdb.hbs
src/templates/jlink/: dso.gdb.hbs  flash.jlink.hbs  gdb.gdb.hbs  reset.jlink.hbs  uart.gdb.hbs
src/templates/new/: Cargo.toml.hbs  Drone.toml.hbs  Justfile.hbs  _gitignore.hbs  rust-toolchain.hbs
src/templates/new/_cargo/: config.hbs
src/templates/new/src/: bin.rs.hbs  lib.rs.hbs  thr.rs.hbs
src/templates/new/src-cortex-m/: bin.rs.hbs  lib.rs.hbs  thr.rs.hbs
src/templates/new/src-cortex-m/tasks/: root.rs.hbs
src/templates/new/src-cortexm/: bin.rs.hbs  lib.rs.hbs  thr.rs.hbs
src/templates/new/src-cortexm/tasks/: root.rs.hbs
src/templates/new/src/tasks/: mod.rs.hbs  root.rs.hbs
src/templates/new/src/thr/: trunk.rs.hbs
src/templates/openocd/: flash.openocd.hbs  gdb-client.hbs  gdb-server.tcl.hbs  gdb.gdb.hbs  gdb.openocd.hbs  itm.openocd.hbs  swo.gdb.hbs  swo.openocd.hbs
stream/: Cargo.toml
stream/src/: lib.rs
templates/: Drone.toml.stpl  build.rs.stpl  flake.nix.stpl  layout.ld  layout.ld.stpl  probe.tcl.stpl
templates/bmp/: cortex_m.gdb  debugger.gdb  gdb.gdb  itm.gdb  reset.gdb  stm32.gdb
templates/layout.ld/: data.stpl  global_stream.stpl  heap.stpl  outer.stpl  stack.stpl  stream.stpl
templates/new/: Justfile
templates/new/src/: lib.rs  main.rs
templates/new/src/thr/: mod.rs
templates/src/: lib.rs.stpl  main.rs.stpl  thr.rs.stpl
templates/src/tasks/: root.rs.stpl
