[workspace]
members = ["config", "stream", "openocd"]

[package]
name = "drone"
version = "0.15.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2021"
default-run = "drone"
repository = "https://github.com/drone-os/drone"
homepage = "https://www.drone-os.com/"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = [
    "async",
    "real-time",
    "bare-metal",
    "rtos",
    "framework",
]
categories = [
    "embedded",
    "asynchronous",
    "concurrency",
    "no-std",
    "os",
]
description = """
CLI utility for Drone, an Embedded Operating System.
"""

[badges]
maintenance = { status = "actively-developed" }

[dependencies.drone-config]
version = "=0.15.0"
path = "config"

[dependencies.drone-stream]
version = "=0.15.0"
path = "stream"

[dependencies.drone-openocd]
version = "=0.15.0"
path = "openocd"

[dependencies]
ansi_term = "0.12"
color-eyre = "0.6"
eyre = "0.6"
handlebars = "3"
Inflector = "0.11"
libc = "0.2"
prettytable-rs = "0.8"
regex = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
signal-hook = "0.3"
structopt = "0.3"
thiserror = "1"
time = { version = "0.3", features = ["macros"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time"] }
walkdir = "2"
