[workspace]
members = ["config", "stream", "openocd"]

[package]
name = "drone"
version = "0.15.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2021"
default-run = "drone"
repository = "https://github.com/drone-os/drone"
homepage = "https://www.drone-os.com/"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = [
    "async",
    "real-time",
    "bare-metal",
    "rtos",
    "framework",
]
categories = [
    "embedded",
    "asynchronous",
    "concurrency",
    "no-std",
    "os",
]
description = """
CLI utility for Drone, an Embedded Operating System.
"""

[badges]
maintenance = { status = "actively-developed" }

[dependencies.drone-stream]
version = "=0.15.0"
path = "stream"

[dependencies.drone-config]
version = "=0.15.0"
path = "config"

[dependencies.drone-openocd]
version = "=0.15.0"
path = "openocd"

[dependencies]
ansi_term = "0.12.1"
color-eyre = "0.6.2"
eyre = "0.6.8"
Inflector = "0.11.4"
libc = "0.2.132"
prettytable-rs = "0.9.0"
regex = "1.6.0"
sailfish = "0.4.0"
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["derive"] }
structopt = "0.3.26"
thiserror = "1.0.35"
time = { version = "0.3.14", features = ["macros"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["local-time"] }
walkdir = "2.3.2"
