[workspace]
members = ["config", "stream", "openocd"]

[workspace.package]
version = "0.15.0"
authors = ["Valentyn Valiaiev <valentine.valyaeff@gmail.com>"]
edition = "2021"
repository = "https://github.com/drone-os/drone"
homepage = "https://www.drone-os.com/"
license = "MIT OR Apache-2.0"

[workspace.dependencies.drone-stream]
version = "=0.15.0"
path = "stream"

[workspace.dependencies.drone-config]
version = "=0.15.0"
path = "config"

[workspace.dependencies.drone-openocd]
version = "=0.15.0"
path = "openocd"

[workspace.dependencies]
eyre = "0.6.8"
serde = { version = "1.0.144", features = ["derive"] }

[package]
name = "drone"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
documentation = "https://api.drone-os.com/drone/0.15/drone/"
default-run = "drone"
readme = "README.md"
keywords = [
    "async",
    "real-time",
    "bare-metal",
    "rtos",
    "framework",
]
categories = [
    "embedded",
    "asynchronous",
    "concurrency",
    "no-std",
    "os",
]
description = """
CLI utility for Drone, an Embedded Operating System.
"""

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
atty = "0.2.14"
clap = { version = "3.2.22", features = ["derive"] }
color-eyre = "0.6.2"
drone-config.workspace = true
drone-openocd.workspace = true
drone-stream.workspace = true
eyre.workspace = true
heck = "0.4.0"
libc = "0.2.132"
prettytable-rs = "0.9.0"
regex = "1.6.0"
sailfish = "0.4.0"
serde_json = "1.0.85"
serde.workspace = true
termcolor = "1.1.3"
thiserror = "1.0.35"
time = { version = "0.3.14", features = ["macros", "local-offset"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["time"] }
walkdir = "2.3.2"
