[package]
name = "drone-config"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
documentation = "https://api.drone-os.com/drone/0.15/drone_config/"
description = """
Configuration for Drone, an Embedded Operating System.
"""

[dependencies]
drone-stream.workspace = true
eyre.workspace = true
indexmap = { version = "1.9.1", features = ["serde"] }
serde.workspace = true
toml = "0.5.9"
