[package]
name = "drone-openocd"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
links = "libopenocd"
documentation = "https://api.drone-os.com/drone/0.15/drone_openocd/"
description = """
OpenOCD bindings for Drone, an Embedded Operating System.
"""

[build-dependencies]
bindgen = "0.60.1"
