[package]
name = "drone-stream"
version = "0.15.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2021"
repository = "https://github.com/drone-os/drone"
homepage = "https://www.drone-os.com/"
documentation = "https://api.drone-os.com/drone-core/0.15/drone_stream/"
license = "MIT OR Apache-2.0"
description = """
Drone Stream definitions.
"""
