[package]
name = "drone-stream"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
documentation = "https://api.drone-os.com/drone/0.15/drone_stream/"
description = """
Drone Stream definitions.
"""
